--- a/main.html
+++ b/main.html
@@ -1,1 +1,55 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>About Me</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <div class="profile-picture">
+      <img src="https://www.google.com/imgres?q=srk&imgurl=https%3A%2F%2Fcdn.britannica.com%2F53%2F252753-050-BF625495%2FActor-India-Shah-Rukh-Khan-2011.jpg&imgrefurl=https%3A%2F%2Fwww.britannica.com%2Fbiography%2FShah-Rukh-Khan&docid=NXIpY1bPN-J8PM&tbnid=9t86uGrxomYF8M&vet=12ahUKEwjl5-eSm8iKAxUdw6ACHarDKqMQM3oECBYQAA..i&w=1600&h=1153&hcb=2&ved=2ahUKEwjl5-eSm8iKAxUdw6ACHarDKqMQM3oECBYQAA" alt="Profile Picture" width =50>
+    </div>
+    <div class="sections">
+      <div class="section">
+        <h2>Name</h2>
+        <p>Er. Shahrukh Singhaneya</p>
+      </div>
+      <div class="section">
+        <h2>Email</h2>
+        <p>mshahrukh0636@email.com</p>
+      </div>
+      <div class="section">
+        <h2>Profile</h2>
+        <p>My  Salaf  is shahrukh   frome sikar Rajasthan</p>
+      </div>
+      <div class="section">
+        <h2>About me</h2>
+        <p>im studay in Accio Job Palatform</p>
+      </div>
+      <div class="section">
+        <h2>Skills</h2>
+        <div class="skills">
+          <div class="skill">
+            <i class="fas fa-code"></i>
+            <span>Web Development</span>
+            <progress value="80" max="100"></progress>
+          </div>
+          <div class="skill">
+            <i class="fas fa-camera"></i>
+            <span>Photography</span>
+            <progress value="60" max="100"></progress>
+          </div>
+          <div class="skill">
+            <i class="fas fa-book"></i>
+            <span>Writing</span>
+            <progress value="90" max="100"></progress>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
+
